Prevent button wrapping

--- a/src-ui/src/app/components/app-frame/app-frame.component.scss
+++ b/src-ui/src/app/components/app-frame/app-frame.component.scss
@@ -137,6 +137,7 @@ main {
 
 .sidebar .nav-link {
   font-weight: 500;
+  white-space: nowrap;
 
   &:hover, &.active, &:focus {
     color: var(--bs-primary);
